# Security-Log-Analyser

./: .gitattributes  .gitignore  .graphifyignore  CODE_OF_CONDUCT.md  CodeOfConduct.md  Contributing.md  FILES_TO_DELETE.md  GITHUB_SETUP.md  LICENSE  PROJECT_SPECIFICATION.txt  README.md  SECURITY_CHECKLIST.md  Security.md  install.sh
.github/: Pull_Request_Template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
Documentation/: ARCHITECTURE_DIAGRAM.md  COMPLETE_GUIDE.md  EXPLANATION.txt  FEATURES.md  Ideas.txt  ProjectStructure.md  QUICKSTART.md  README.md  SETUP_AND_TESTING.md  TECHNICAL_GUIDE.md  TEST_LOGS_GUIDE.md  WEEK1_WRITEUP.md  rust-learning-roadmap.md  test_logs.txt
Ideas/: Ideas.txt
graphify-out/: .graphify_analysis.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
log_parser/: Cargo.toml  EXPLANATION.txt  HOW_IT_WORKS.md  sample_logs.txt
log_parser/src/: main.rs
packaging/homebrew/: logr.rb
security_api/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CORPORATE_DESIGN_GUIDE.md  CVSS_IMPLEMENTATION.md  Cargo.toml  DATABASE_SETUP.md  DETECTION_RULES.md  DOCUMENTATION_INDEX.md  Dockerfile  ERROR_DIAGNOSTICS.md  EXPLANATION.txt  FEATURES_IMPLEMENTED.md  FIXES_COMPLETED.md  HOW_CLAUDE_WORKS.md  HOW_TO_TEST.md  LOG_FORMAT.md  MIGRATION.md  NEXT_STEPS.md  PROJECT_VISUAL_GUIDE.html  README.md  README_PARSER.md  RELEASE_CHECKLIST.md  TESTING_GUIDE.md  UI_CVSS_UPDATE.md  UNIVERSAL_PARSER.md  VERIFY_DATABASE.md  WEEK1_WRITEUP.md  WEEK2_GUIDE.md  WORKSPACE_MIGRATION_COMPLETE.md  bad_format_test.txt  check_database.sh  corporate_frontend.html  docker-compose.yml  download_geoip.sh  mixed_format_test.txt  test_alerts.txt  test_api.html  test_gemini.sh
security_api/crates/analyzer-basic/: Cargo.toml
security_api/crates/analyzer-basic/src/: lib.rs
security_api/crates/analyzer-claude/: Cargo.toml
security_api/crates/analyzer-claude/src/: lib.rs
security_api/crates/analyzer-claude/src/llm/: analyzer.rs  mock.rs  mod.rs  prompts.rs
security_api/crates/analyzer-groq/: Cargo.toml  DEPRECATED.md
security_api/crates/analyzer-groq/src/: lib.rs
security_api/crates/analyzer-llm/: Cargo.toml  LLM_CONFIG.md
security_api/crates/analyzer-llm/src/: analyzer.rs  config.rs  error.rs  lib.rs  prompts.rs  report.rs
security_api/crates/api/: Cargo.toml
security_api/crates/api/src/: groq_handler.rs  llm_handler.rs  main.rs  simple_handler.rs
security_api/crates/api/static/: index.html  index_old_backup.html
security_api/crates/cli/: Cargo.toml
security_api/crates/cli/src/: main.rs  output.rs
security_api/crates/common/: Cargo.toml
security_api/crates/common/src/: geolocation.rs  lib.rs
security_api/crates/common/src/database/: mod.rs  queries.rs
security_api/crates/common/src/parsers/: apache.rs  generic.rs  jsonl.rs  mod.rs  syslog.rs
security_api/database/: README.md  create_tables.sql  test_db_connection.sh
security_api/examples/: demo_analyzer.rs  test_cvss.rs  test_database.rs  test_llm_analyzer.rs  test_parser.rs
security_api/src/: cvss.rs  main.rs  main.rs.backup
security_api/src/database/: mod.rs  models.rs  queries.rs
security_api/src/llm/: analyzer.rs  mock.rs  prompts.rs
security_api/static/: index.html
