[package]
name = "security_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
maxminddb = "0.24"
csv = "1.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
