[package]
name = "security_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
maxminddb = "0.24"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
nom = "7.1"
# LLM Integration
dotenv = "0.15"
async-trait = "0.1"

# Database Integration
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "macros"], default-features = false }
