[workspace]
members = [
    "crates/common",
    "crates/analyzer-basic",
    "crates/analyzer-claude",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing and regex
regex = "1.10"
nom = "7.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "macros"], default-features = false }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
dotenv = "0.15"
async-trait = "0.1"

# HTTP client (for Claude API)
reqwest = { version = "0.11", features = ["json"] }

# GeoIP
maxminddb = "0.24"
csv = "1.3"
