[package]
name = "security-analyzer-claude"
version = "0.1.0"
edition = "2024"

[dependencies]
security-common = { path = "../common" }
reqwest = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
