[package]
name = "logr-cli"
version = "0.1.0"
edition = "2021"
description = "Security log analyzer CLI — detect threats, score risks, and audit logs from the terminal"
license = "MIT"
repository = "https://github.com/senaraufi/Security-Log-Analyser"
keywords = ["security", "logs", "cli", "threat-detection", "cvss"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "logr"
path = "src/main.rs"

[dependencies]
# Internal crates
security-common = { path = "../common" }
security-analyzer-basic = { path = "../analyzer-basic" }

# CLI
clap = { version = "4", features = ["derive"] }

# Output formatting
colored = "2"
comfy-table = "7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
