[package]
name = "security-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
nom = { workspace = true }
uuid = { workspace = true }
maxminddb = { workspace = true }
csv = { workspace = true }
